--- a/src/app/comps/login/login.component.html
+++ b/src/app/comps/login/login.component.html
@@ -17,7 +17,11 @@
         </mat-form-field>
         <mat-form-field class="example-full-width">
           <mat-label>Enter your password</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" />
+          <input
+            matInput
+            [type]="hide ? 'password' : 'text'"
+            formControlName="password"
+          />
           <button
             mat-icon-button
             matSuffix
@@ -31,7 +35,15 @@
       </form>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" (click)="onLogin()" [disabled]="loginForm.invalid">Login</button> &nbsp;
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="onLogin()"
+        [disabled]="loginForm.invalid"
+      >
+        Login
+      </button>
+      &nbsp;
       <small
         >Don't have an account? Click <a [routerLink]="'/register'">here</a> to
         Register.</small
