--- a/src/app/comps/new-todo/new-todo.component.html
+++ b/src/app/comps/new-todo/new-todo.component.html
@@ -1,34 +1,35 @@
 <h2 mat-dialog-title>Add New Todo</h2>
-<mat-dialog-content class="mat-typography">
-  <form [formGroup]="todoGroup">
+<form [formGroup]="todoGroup" (ngSubmit)="addTodo()">
+  <mat-dialog-content class="mat-typography">
     <mat-form-field class="example-full-width">
       <mat-label>Todo Name</mat-label>
-      <input matInput 
-        placeholder="New Todo" 
-        formControlName="todo"
-      />
+      <input matInput placeholder="New Todo" formControlName="todo" />
     </mat-form-field>
     <mat-form-field class="example-full-width">
-    <mat-label>Status</mat-label>
-    <mat-select formControlName="status">
-      @for (status of statuses; track status) {
-        <mat-option [value]="status">{{status}}</mat-option>
-      }
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-  <mat-label>Created At</mat-label>
-  <input matInput [matDatepicker]="picker" formControlName="createdDate">
-  <mat-hint>MM/DD/YYYY</mat-hint>
-  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
-
-  </form>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close color="primary">Cancel</button>
-  <button mat-raised-button [mat-dialog-close]="true" (click)="addTodo()" color="accent" [disabled]="todoGroup.invalid">
-    Add Todo
-  </button>
-</mat-dialog-actions>
+      <mat-label>Status</mat-label>
+      <mat-select formControlName="status">
+        @for (status of statuses; track status) {
+        <mat-option [value]="status">{{ status }}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Created At</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="createdDate" />
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle
+        matIconSuffix
+        [for]="picker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-raised-button [mat-dialog-close]="false" color="primary">
+      Cancel
+    </button>
+    <button mat-raised-button color="accent" [disabled]="todoGroup.invalid">
+      Add Todo
+    </button>
+  </mat-dialog-actions>
+</form>
