--- a/src/app/comps/todo-list/todo-list.component.html
+++ b/src/app/comps/todo-list/todo-list.component.html
@@ -1,53 +1,54 @@
-@if(dataSource.length > 0) {
-
-<table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
-  <!-- S.No Column -->
-  <ng-container matColumnDef="sno">
-    <th mat-header-cell *matHeaderCellDef> S. No </th>
-    <td mat-cell *matCellDef="let element; let i =  index;">{{i + 1}}</td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Todo Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.todo}} </td>
-  </ng-container>
-
-  <!-- Status Column -->
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-  </ng-container>
-
-  <!-- Created At Column -->
-  <ng-container matColumnDef="createdAt">
-    <th mat-header-cell *matHeaderCellDef> Created At </th>
-    <td mat-cell *matCellDef="let element"> {{element.createdDate | date}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <tr>
-      <td mat-cell *matCellDef="let element"> 
-          <button mat-raised-button color="primary" (click)="editTodo(element)"><mat-icon>edit</mat-icon>
-            Edit
-          </button> &nbsp;
-          <button mat-raised-button color="warn" (click)="deleteTodo(element.id)"><mat-icon>delete</mat-icon>  Delete
-          </button>
-      </td>
-    </tr>    
-  </ng-container>
-
-  
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+@if(isLoading) {
+  <mat-spinner></mat-spinner>
 } @else {
-  @if(dataSource.length == 0) {
-    <h1>No Data Found</h1>
-  } @else {
-    <mat-spinner></mat-spinner>
-  }
+  @if(dataSource.length > 0) {
+
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+      <!-- S.No Column -->
+      <ng-container matColumnDef="sno">
+        <th mat-header-cell *matHeaderCellDef> S. No </th>
+        <td mat-cell *matCellDef="let element; let i =  index;">{{i + 1}}</td>
+      </ng-container>
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Todo Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.todo}} </td>
+      </ng-container>
+    
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+      </ng-container>
+    
+      <!-- Created At Column -->
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef> Created At </th>
+        <td mat-cell *matCellDef="let element"> {{element.createdDate | date}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <tr>
+          <td mat-cell *matCellDef="let element"> 
+              <button mat-raised-button color="primary" (click)="editTodo(element)"><mat-icon>edit</mat-icon>
+                Edit
+              </button> &nbsp;
+              <button mat-raised-button color="warn" (click)="deleteTodo(element.id)"><mat-icon>delete</mat-icon>  Delete
+              </button>
+          </td>
+        </tr>    
+      </ng-container>
+    
+      
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    } @else {
+      <h1>No Data Found</h1>
+    }
 }
+
 
