--- a/src/app/comps/todo-list/todo-list.component.html
+++ b/src/app/comps/todo-list/todo-list.component.html
@@ -1,54 +1,86 @@
 @if(isLoading) {
-  <mat-spinner></mat-spinner>
-} @else {
-  @if(dataSource.length > 0) {
+<mat-spinner></mat-spinner>
+} @else { @if(dataSource) {
+<div class="main-body">
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex. Mia"
+      #input
+    />
+  </mat-form-field>
 
+  <div class="table-container">
     <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
       <!-- S.No Column -->
       <ng-container matColumnDef="sno">
-        <th mat-header-cell *matHeaderCellDef> S. No </th>
-        <td mat-cell *matCellDef="let element; let i =  index;">{{i + 1}}</td>
+        <th mat-header-cell *matHeaderCellDef>S. No</th>
+        <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
       </ng-container>
-    
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Todo Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.todo}} </td>
+        <th mat-header-cell *matHeaderCellDef>Todo Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.todo }}</td>
       </ng-container>
-    
+
       <!-- Status Column -->
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
       </ng-container>
-    
+
       <!-- Created At Column -->
       <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef> Created At </th>
-        <td mat-cell *matCellDef="let element"> {{element.createdDate | date}} </td>
+        <th mat-header-cell *matHeaderCellDef>Created At</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.createdDate | date }}
+        </td>
       </ng-container>
-    
+
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
         <tr>
-          <td mat-cell *matCellDef="let element"> 
-              <button mat-raised-button color="primary" (click)="editTodo(element)"><mat-icon>edit</mat-icon>
-                Edit
-              </button> &nbsp;
-              <button mat-raised-button color="warn" (click)="deleteTodo(element.id)"><mat-icon>delete</mat-icon>  Delete
-              </button>
+          <td mat-cell *matCellDef="let element">
+            <button
+              mat-raised-button
+              color="primary"
+              (click)="editTodo(element)"
+            >
+              <mat-icon>edit</mat-icon>
+              Edit
+            </button>
+            &nbsp;
+            <button
+              mat-raised-button
+              color="warn"
+              (click)="deleteTodo(element.id)"
+            >
+              <mat-icon>delete</mat-icon> Delete
+            </button>
           </td>
-        </tr>    
+        </tr>
       </ng-container>
-    
-      
-    
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="6">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
     </table>
-    } @else {
-      <h1>No Data Found</h1>
-    }
-}
 
+    <!-- <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator> -->
+  </div>
+</div>
 
+} @else {
+<h1>No Data Found</h1>
+} }
