--- a/src/app/comps/todo-list/todo-list.component.html
+++ b/src/app/comps/todo-list/todo-list.component.html
@@ -1,40 +1,37 @@
-@if(isLoading) {
-<mat-spinner></mat-spinner>
-} @else { @if(dataSource) {
 <div class="main-body">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input
       matInput
       (keyup)="applyFilter($event)"
-      placeholder="Ex. Mia"
+      placeholder="Ex. Todo"
       #input
     />
   </mat-form-field>
 
   <div class="table-container">
-    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource" matSort>
       <!-- S.No Column -->
       <ng-container matColumnDef="sno">
-        <th mat-header-cell *matHeaderCellDef>S. No</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>S. No</th>
         <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Todo Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Todo Name</th>
         <td mat-cell *matCellDef="let element">{{ element.todo }}</td>
       </ng-container>
 
       <!-- Status Column -->
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
         <td mat-cell *matCellDef="let element">{{ element.status }}</td>
       </ng-container>
 
       <!-- Created At Column -->
       <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Created At</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
         <td mat-cell *matCellDef="let element">
           {{ element.createdDate | date }}
         </td>
@@ -74,13 +71,9 @@
       </tr>
     </table>
 
-    <!-- <mat-paginator
+    <mat-paginator
       [pageSizeOptions]="[5, 10, 25, 100]"
       aria-label="Select page of users"
-    ></mat-paginator> -->
+    ></mat-paginator>
   </div>
 </div>
-
-} @else {
-<h1>No Data Found</h1>
-} }
